--- a/src/main/resources/templates/createForm.html
+++ b/src/main/resources/templates/createForm.html
@@ -19,6 +19,7 @@
   <div class="nav-buttons">
     <a href="/advertisement/new">Sprzedaj</a>
     <a href="/messages">Wiadomosci</a>
+    <a href="/favourites">Ulubione</a>
     <a href="/account"><span id="principalName" th:text="${principalName}"></span></a>
     <a href="/logout" th:if="${logout != null}">
       <span id="logout" th:text="${logout}"></span>
