--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
   <!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
   <title>Moto-Budżet</title>
-
   <meta charset="utf-8">
 <!--  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
 <!--  <meta name="description" content="">-->
@@ -22,6 +20,7 @@
   <div class="nav-buttons">
     <a href="/advertisement/new">Sprzedaj</a>
     <a href="/messages">Wiadomosci</a>
+    <a href="/favourites">Ulubione</a>
     <a href="/account"><span id="principalName" th:text="${principalName}"></span></a>
     <a href="/logout" th:if="${logout != null}">
       <span id="logout" th:text="${logout}"></span>
@@ -33,11 +32,7 @@
 </div>
 <style>
 
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+
   /* Stylowanie nagłówka */
   .form-signin-heading {
     text-align: center;
