price icon implemented plus calculating position of message sender name div in messages

--- a/src/main/resources/static/css/myAccountPanel.css
+++ b/src/main/resources/static/css/myAccountPanel.css
@@ -44,7 +44,7 @@
 #userNameValueDiv {
     margin-right: 10px;
     position: relative;
-    top: 10px;
+    /*top: 10px;*/
     flex-shrink: 0;
 }
 
