--- a/module-main/motobudzetapi/src/main/resources/templates/login.html
+++ b/module-main/motobudzetapi/src/main/resources/templates/login.html
@@ -19,7 +19,7 @@
     <a href="/advertisement/new">Sprzedaj</a>
     <a href="/messages">Wiadomosci</a>
     <a href="/favourites">Ulubione</a>
-    <a href="/account"><span id="principalName" th:text="${principalName}"></span></a>
+    <a href="/account"><span id="username" th:text="${username}"></span></a>
     <a href="/logout" th:if="${logout != null}">
       <span id="logout" th:text="${logout}"></span>
     </a>
