--- a/module-main/motobudzetapi/src/main/resources/templates/account.html
+++ b/module-main/motobudzetapi/src/main/resources/templates/account.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/myAccountPanel.css}" />
     <script type="text/javascript" th:src="@{/js/navBarMainContainerLogo.js}" ></script>
     <script type="text/javascript" th:src="@{/js/myAccount.js}" ></script>
+    <script type="text/javascript" th:src="@{/js/messages.js}" ></script>
 </head>
 
 <body>
@@ -22,7 +23,7 @@
         <a href="/advertisement/new">Sprzedaj</a>
         <a href="/messages">Wiadomosci</a>
         <a href="/favourites">Ulubione</a>
-        <a href="/account"><span id="principalName" th:text="${principalName}"></span></a>
+        <a href="/account"><span id="username" th:text="${username}"></span></a>
         <a href="/logout" th:if="${logout != null}">
             <span id="logout" th:text="${logout}"></span>
         </a>
