--- a/module-main/motobudzetapi/src/main/resources/templates/advertisement.html
+++ b/module-main/motobudzetapi/src/main/resources/templates/advertisement.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <title>Moto-Budżet</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/navBarMainContainerLogoAdvertisement.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/css/advertisement.css}" />
     <script type="text/javascript" th:src="@{/js/navBarMainContainerLogo.js}" ></script>
     <script type="text/javascript" th:src="@{/js/advertisement.js}" ></script>
+    <script type="text/javascript" th:src="@{/js/advertisementResult.js}" ></script>
 </head>
 <body>
 <header>
@@ -18,7 +20,7 @@
         <a href="/advertisement/new">Sprzedaj</a>
         <a href="/messages">Wiadomosci</a>
         <a href="/favourites">Ulubione</a>
-        <a href="/account"><span id="principalName" th:text="${principalName}"></span></a>
+        <a href="/account"><span id="username" th:text="${username}"></span></a>
         <a href="/logout" th:if="${logout != null}">
             <span id="logout" th:text="${logout}"></span>
         </a>
