--- a/module-main/motobudzetapi/src/main/resources/templates/register.html
+++ b/module-main/motobudzetapi/src/main/resources/templates/register.html
@@ -23,7 +23,7 @@
     <a href="/advertisement/new">Sprzedaj</a>
     <a href="/messages">Wiadomosci</a>
     <a href="/favourites">Ulubione</a>
-    <a href="/account"><span id="principalName" th:text="${principalName}"></span></a>
+    <a href="/account"><span id="username" th:text="${username}"></span></a>
     <a href="/logout" th:if="${logout != null}">
       <span id="logout" th:text="${logout}"></span>
     </a>
@@ -152,7 +152,7 @@
 
   const usernameInput = document.createElement("input");
   usernameInput.type = "text";
-  usernameInput.id = "username";
+  usernameInput.id = "ddd";
   usernameInput.name = "username";
   usernameInput.className = "form-control";
   usernameInput.placeholder = "Username";
