--- a/module-main/motobudzetapi/src/main/resources/static/css/myAccountPanel.css
+++ b/module-main/motobudzetapi/src/main/resources/static/css/myAccountPanel.css
@@ -5,7 +5,6 @@
     flex-basis: auto;
     height: auto;
     background-color: #181818;
-    margin: 0 20px;
     margin-bottom: 15px;
     padding: 10px;
     display: flex;
@@ -44,7 +43,7 @@
 #userNameValueDiv {
     margin-right: 10px;
     position: relative;
-    /*top: 10px;*/
+    top: 10px;
     flex-shrink: 0;
 }
 
