--- a/module-main/motobudzetapi/src/main/resources/static/css/searchForm.css
+++ b/module-main/motobudzetapi/src/main/resources/static/css/searchForm.css
@@ -1,4 +1,5 @@
 #searchFormContainer {
+    /*background-color: black;*/
     background-color: #181818;
     border-radius: 30px;
     box-shadow: 0 0 40px darkgoldenrod;
