--- a/module-main/motobudzetapi/src/main/resources/static/css/login.css
+++ b/module-main/motobudzetapi/src/main/resources/static/css/login.css
@@ -33,7 +33,8 @@
 }
 
 #registerFormContainer {
-    background-color: #181818;
+    /*background-color: #181818;*/
+    background-color: #000000;
     border-radius: 30px;
     box-shadow: 0 0 40px darkgoldenrod;
     border: 0px dashed darkgoldenrod;
