--- a/module-main/motobudzetapi/src/main/resources/static/css/myAccountPanel.css
+++ b/module-main/motobudzetapi/src/main/resources/static/css/myAccountPanel.css
@@ -4,7 +4,8 @@
     box-sizing: border-box;
     flex-basis: auto;
     height: auto;
-    background-color: #181818;
+    /*background-color: #181818;*/
+    background-color: #000000;
     margin-bottom: 15px;
     padding: 10px;
     display: flex;
@@ -69,7 +70,8 @@
     color: white;
     resize: none;
     border-radius: 10px;
-    background-color: #181818;
+    /*background-color: #181818;*/
+    background-color: #000000;
     max-width: 100%;
     box-sizing: border-box;
     flex-grow: 1;
@@ -109,7 +111,8 @@
     max-width: 300px; /* Maksymalna szerokość */
     min-height: 500px;
     margin: 0 20px;
-    background-color: #181818;
+    /*background-color: #181818;*/
+    background-color: #000000;
     border-radius: 30px;
     box-shadow: 0 0 40px darkgoldenrod;
     border: 0 dashed darkgoldenrod;
@@ -130,7 +133,8 @@
     max-width: 1500px; /* Maksymalna szerokość */
     min-height: 500px;
     margin: 0 20px;
-    background-color: #181818;
+    /*background-color: #181818;*/
+    background-color: #000000;
     border-radius: 30px;
     box-shadow: 0 0 40px darkgoldenrod;
     border: 0 dashed darkgoldenrod;
@@ -149,7 +153,8 @@
     margin-left: 20px;
     margin-right: 20px;
     color: darkgoldenrod;
-    background-color: #181818;
+    background-color: #000000;
+    /*background-color: #181818;*/
     display: flex;
     flex-direction: column;
     justify-content: center; /* Wyśrodkowanie w poziomie */
@@ -179,7 +184,8 @@
     max-width: 1500px; /* Maksymalna szerokość */
     height: 40px;
     margin: 5px;
-    background-color: #181818;
+    background-color: #000000;
+    /*background-color: #181818;*/
     /*border-radius: 30px;*/
     /*box-shadow: 0 0 40px darkgoldenrod;*/
     border: 0 dashed darkgoldenrod;
@@ -198,7 +204,8 @@
     max-width: 1000px; /* Maksymalna szerokość */
     height: 100px;
     margin: 0 20px;
-    background-color: #181818;
+    /*background-color: #181818;*/
+    background-color: #000000;
     border-radius: 30px;
     box-shadow: 0 0 40px darkgoldenrod;
     border: 0 dashed darkgoldenrod;
@@ -216,11 +223,11 @@
     width: 1500px;
     margin: 150px auto 0;
     background-color: black;
-    border: 2px solid darkgoldenrod;
+    border: 0px solid darkgoldenrod;
     padding: 20px;
     display: flex;
     border-radius: 30px;
-    box-shadow: 0 0 30px moccasin;
+    box-shadow: 0 0 0px moccasin;
     animation: fade-in-main 1s ease-out;
     max-width: 100%;
     /*flex-wrap: wrap;*/
