--- a/module-main/motobudzetapi/src/main/resources/static/css/searchForm.css
+++ b/module-main/motobudzetapi/src/main/resources/static/css/searchForm.css
@@ -1,6 +1,7 @@
 #searchFormContainer {
     /*background-color: black;*/
-    background-color: #181818;
+    background-color: #000000;
+    /*background-color: #181818;*/
     border-radius: 30px;
     box-shadow: 0 0 40px darkgoldenrod;
     border: 0px dashed darkgoldenrod;
@@ -18,6 +19,17 @@
 
     /* Dodaj zmianę box shadow po najechaniu myszką */
     transition: box-shadow 0s ease-in-out;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
 }
 
 /* Efekt po najechaniu myszką */
