--- a/module-main/motobudzetapi/src/main/resources/templates/index.html
+++ b/module-main/motobudzetapi/src/main/resources/templates/index.html
@@ -10,6 +10,20 @@
     <script type="text/javascript" th:src="@{/js/searchForm.js}" ></script>
     <script type="text/javascript" th:src="@{/js/last-uploaded.js}" ></script>
 </head>
+<style>
+    /*html {*/
+    /*    transform: scale(0.75);*/
+    /*    transform-origin: left top;*/
+    /*    width: 133.33%;*/
+    /*}*/
+
+    /*img {*/
+    /*    image-rendering: auto; !* Lub crisp-edges *!*/
+    /*}*/
+    /*body {*/
+    /*    zoom: 0.85; !* Skaluj stronę na 75% *!*/
+    /*}*/
+</style>
 
 <body>
 <header>
