--- a/module-main/motobudzetapi/src/main/resources/static/css/myAccountPanel.css
+++ b/module-main/motobudzetapi/src/main/resources/static/css/myAccountPanel.css
@@ -155,7 +155,8 @@
     margin-left: 20px;
     margin-right: 20px;
     color: darkgoldenrod;
-    background-color: #000000;
+    background-color: rgba(0, 0, 0, 0.9);
+    /*background-color: #000000;*/
     /*background-color: #181818;*/
     display: flex;
     flex-direction: column;
