--- a/module-main/motobudzetapi/src/main/resources/static/css/navBarMainContainerLogoAdvertisement.css
+++ b/module-main/motobudzetapi/src/main/resources/static/css/navBarMainContainerLogoAdvertisement.css
@@ -244,10 +244,10 @@ header {
 .container-main .half-container-big {
     box-shadow: 0 0 40px darkgoldenrod;
 
-    overflow: hidden; /* Ukrycie zawartości poza zaokrąglonymi krawędziami */
+    /*overflow: hidden; !* Ukrycie zawartości poza zaokrąglonymi krawędziami *!*/
     border-radius: 30px;
     width: 650px;
-    height: 1100px;
+    height: 1200px;
     margin: 20px;
     display: flex;
     justify-content: center;
@@ -260,6 +260,23 @@ header {
     /*border: 1px solid darkgoldenrod;*/
     max-width: 100%;
 }
+
+.container-main .half-container-horizontal {
+    box-shadow: 0 0 40px darkgoldenrod;
+    border-radius: 30px;
+    overflow: hidden;
+    width: 1340px;
+    height: 700px;
+    max-height: 100%;
+    max-width: 100%;
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.9);
+}
+
 
 
 
