--- a/module-main/motobudzetapi/src/main/resources/templates/advertisement.html
+++ b/module-main/motobudzetapi/src/main/resources/templates/advertisement.html
@@ -8,6 +8,8 @@
     <script type="text/javascript" th:src="@{/js/navBarMainContainerLogo.js}" ></script>
     <script type="text/javascript" th:src="@{/js/advertisement.js}" ></script>
     <script type="text/javascript" th:src="@{/js/advertisementResult.js}" ></script>
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 </head>
 <body>
 <header>
@@ -27,6 +29,9 @@
     </div>
 </header>
 <div class="container-main" id="container-main">
+
 </div>
+<!--<div className="ql-editor" id="descriptionContainer"></div>-->
+
 </body>
 </html>
