--- a/module-main/motobudzetapi/src/main/resources/templates/createForm.html
+++ b/module-main/motobudzetapi/src/main/resources/templates/createForm.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" type="text/css" th:href="@{/css/createForm.css}" />
   <script type="text/javascript" th:src="@{/js/navBarMainContainerLogo.js}" ></script>
   <script type="text/javascript" th:src="@{/js/createForm.js}" ></script>
+  <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+  <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 </head>
 
 <body>
@@ -31,7 +33,7 @@
   <div class="half-container-big" id="half-container-big1"><div id="errorMessages" class="error-messages"></div></div>
   <div class="half-container-big" id="half-container-big2">
     <div class="fileContainer" id="fileDropArea"></div>  <div id="thumbnails"></div></div>
-
+  <div class="half-container-horizontal" id="half-container-horizontal">
 </div>
 </body>
 </html>
