--- a/module-main/motobudzetapi/src/main/resources/templates/index.html
+++ b/module-main/motobudzetapi/src/main/resources/templates/index.html
@@ -9,8 +9,11 @@
     <script type="text/javascript" th:src="@{/js/navBarMainContainerLogo.js}" ></script>
     <script type="text/javascript" th:src="@{/js/searchForm.js}" ></script>
     <script type="text/javascript" th:src="@{/js/last-uploaded.js}" ></script>
+    <script type="text/javascript" th:src="@{/js/succesPopUp.js}" ></script>
 </head>
 <style>
+
+
 
 
     /*html {*/
