--- a/module-main/motobudzetapi/src/main/resources/templates/advertisement.html
+++ b/module-main/motobudzetapi/src/main/resources/templates/advertisement.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" th:src="@{/js/navBarMainContainerLogo.js}" ></script>
     <script type="text/javascript" th:src="@{/js/advertisement.js}" ></script>
     <script type="text/javascript" th:src="@{/js/advertisementResult.js}" ></script>
+    <script type="text/javascript" th:src="@{/js/succesPopUpAdv.js}" ></script>
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 </head>
