--- a/module-main/motobudzetapi/src/main/resources/templates/index.html
+++ b/module-main/motobudzetapi/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" th:src="@{/js/navBarMainContainerLogo.js}" ></script>
     <script type="text/javascript" th:src="@{/js/searchForm.js}" ></script>
     <script type="text/javascript" th:src="@{/js/last-uploaded.js}" ></script>
-    <script type="text/javascript" th:src="@{/js/succesPopUp.js}" ></script>
+    <script type="text/javascript" th:src="@{/js/succesPopUpAcc.js}" ></script>
 </head>
 <style>
 
@@ -29,6 +29,11 @@
     /*    zoom: 0.85; !* Skaluj stronę na 75% *!*/
     /*}*/
 </style>
+<!--<script>-->
+<!--    window.addEventListener("load", function() {-->
+<!--        window.scrollTo(0, 0);-->
+<!--    });-->
+<!--</script>-->
 
 <body>
 <header>
