--- a/module-main/motobudzetapi/src/main/resources/templates/advertisement.html
+++ b/module-main/motobudzetapi/src/main/resources/templates/advertisement.html
@@ -9,8 +9,8 @@
     <script type="text/javascript" th:src="@{/js/advertisement.js}" ></script>
     <script type="text/javascript" th:src="@{/js/advertisementResult.js}" ></script>
     <script type="text/javascript" th:src="@{/js/succesPopUpAdv.js}" ></script>
-    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+    <script type="text/javascript" th:src="@{/js/editForm.js}" ></script>
+    <script type="text/javascript" th:src="@{/js/quill.js}" ></script>
 </head>
 <body>
 <header>
@@ -32,7 +32,5 @@
 <div class="container-main" id="container-main">
 
 </div>
-<!--<div className="ql-editor" id="descriptionContainer"></div>-->
-
 </body>
 </html>
