user panel restructured , optimized favourites overflowY implemented , little refactor to utils js , messaging litlle bit fixed , edit success notification implemented

--- a/module-main/motobudzetapi/src/main/resources/templates/register.html
+++ b/module-main/motobudzetapi/src/main/resources/templates/register.html
@@ -10,7 +10,7 @@
 <!--  <meta name="description" content="">-->
 <!--  <meta name="author" content="">-->
   <link rel="stylesheet" type="text/css" th:href="@{/css/navBarMainContainerLogoAdvertisement.css}" />
-  <script type="text/javascript" th:src="@{/js/navBarMainContainerLogo.js}" ></script>
+  <script type="text/javascript" th:src="@{/js/utils.js}" ></script>
 </head>
 <body>
 <header>
