--- a/module-main/motobudzetapi/src/main/resources/static/css/myAccountPanel.css
+++ b/module-main/motobudzetapi/src/main/resources/static/css/myAccountPanel.css
@@ -55,7 +55,7 @@
     padding: 10px;
     border-radius: 10px;
     color: white;
-    overflow-wrap: break-word;
+    overflow-wrap: anywhere;
     text-align: left;
 }
 
@@ -72,11 +72,12 @@
     color: white;
     resize: none;
     border-radius: 10px;
-    /*background-color: #181818;*/
     background-color: #000000;
     max-width: 100%;
     box-sizing: border-box;
     flex-grow: 1;
+    position: absolute;  /* Dodane */
+    bottom: 0;
 }
 
 #messageInputDiv {
@@ -86,6 +87,7 @@
     max-width: 100%;
     box-sizing: border-box;
     flex-grow: 1;
+    position: relative;
 }
 
 #headerContainer {
@@ -132,8 +134,9 @@
 }
 .right-container {
     width: 100%; /* Pełna szerokość */
-    max-width: 1500px; /* Maksymalna szerokość */
-    min-height: 500px;
+    max-width: 100%; /* Maksymalna szerokość */
+    min-height: 920px;
+    max-height: 920px;
     margin: 0 20px;
     /*background-color: #181818;*/
     /*background-color: #000000;*/
@@ -141,6 +144,7 @@
     border-radius: 30px;
     box-shadow: 0 0 40px darkgoldenrod;
     border: 0 dashed darkgoldenrod;
+    color: darkgoldenrod;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -157,18 +161,25 @@
     margin-right: 20px;
     color: darkgoldenrod;
     background-color: rgba(0, 0, 0, 0.9);
-    /*background-color: #000000;*/
-    /*background-color: #181818;*/
-    display: flex;
+    max-height: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    padding-bottom: 30px;
+    padding-left: 20px;
+    padding-right: 20px;
+    scrollbar-width: thin;
+    scrollbar-color: darkgoldenrod transparent;
+    display: grid;
+    grid-template-columns: 100%;
     flex-direction: column;
     justify-content: center; /* Wyśrodkowanie w poziomie */
     align-items: center; /* Wyśrodkowanie w pionie */
     width: 100%;
     max-width: 100%;
-    max-height: 100%;
     box-sizing: border-box;
     flex-basis: auto;
 }
+
 
 #resultContainerRight::-webkit-scrollbar {
     width: 5px; /* Szerokość paska przewijania */
