--- a/module-main/motobudzetapi/src/main/resources/templates/account.html
+++ b/module-main/motobudzetapi/src/main/resources/templates/account.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/navBarMainContainerLogoAdvertisement.css}" />
     <link rel="stylesheet" type="text/css" th:href="@{/css/searchForm.css}" />
     <link rel="stylesheet" type="text/css" th:href="@{/css/myAccountPanel.css}" />
-    <script type="text/javascript" th:src="@{/js/navBarMainContainerLogo.js}" ></script>
+    <script type="text/javascript" th:src="@{/js/utils.js}" ></script>
     <script type="text/javascript" th:src="@{/js/userAdvertisements.js}" ></script>
-<!--    <script type="text/javascript" th:src="@{/js/advertisementResult.js}" ></script>-->
     <script type="text/javascript" th:src="@{/js/myAccount.js}" ></script>
     <script type="text/javascript" th:src="@{/js/messages.js}" ></script>
 </head>
