--- a/module-main/motobudzetapi/src/main/resources/templates/advertisement.html
+++ b/module-main/motobudzetapi/src/main/resources/templates/advertisement.html
@@ -5,11 +5,8 @@
     <title>Moto-Budżet</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/navBarMainContainerLogoAdvertisement.css}" />
     <link rel="stylesheet" type="text/css" th:href="@{/css/advertisement.css}" />
-    <script type="text/javascript" th:src="@{/js/navBarMainContainerLogo.js}" ></script>
     <script type="text/javascript" th:src="@{/js/advertisement.js}" ></script>
-    <script type="text/javascript" th:src="@{/js/advertisementResult.js}" ></script>
-    <script type="text/javascript" th:src="@{/js/succesPopUpAdv.js}" ></script>
-    <script type="text/javascript" th:src="@{/js/editForm.js}" ></script>
+    <script type="text/javascript" th:src="@{/js/utils.js}" ></script>
     <script type="text/javascript" th:src="@{/js/quill.js}" ></script>
 </head>
 <body>
