--- a/module-main/motobudzetapi/src/main/resources/templates/details.html
+++ b/module-main/motobudzetapi/src/main/resources/templates/details.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" th:href="@{/css/navBarMainContainerLogoAdvertisement.css}" />
     <link rel="stylesheet" type="text/css" th:href="@{/css/details.css}" />
-    <script type="text/javascript" th:src="@{/js/navBarMainContainerLogo.js}" ></script>
+    <script type="text/javascript" th:src="@{/js/utils.js}" ></script>
     <script type="text/javascript" th:src="@{/js/userDetails.js}" ></script>
 </head>
 <body>
