--- a/module-main/motobudzetapi/src/main/resources/templates/index.html
+++ b/module-main/motobudzetapi/src/main/resources/templates/index.html
@@ -6,10 +6,9 @@
     <title>Moto-Budżet</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/navBarMainContainerLogoAdvertisement.css}" />
     <link rel="stylesheet" type="text/css" th:href="@{/css/searchForm.css}" />
-    <script type="text/javascript" th:src="@{/js/navBarMainContainerLogo.js}" ></script>
+    <script type="text/javascript" th:src="@{/js/utils.js}" ></script>
     <script type="text/javascript" th:src="@{/js/searchForm.js}" ></script>
     <script type="text/javascript" th:src="@{/js/last-uploaded.js}" ></script>
-    <script type="text/javascript" th:src="@{/js/succesPopUpAcc.js}" ></script>
 </head>
 <style>
 
