--- a/module-main/motobudzetapi/src/main/resources/templates/messages.html
+++ b/module-main/motobudzetapi/src/main/resources/templates/messages.html
@@ -6,7 +6,7 @@
     <title>Moto-Budżet</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/navBarMainContainerLogoAdvertisement.css}" />
     <link rel="stylesheet" type="text/css" th:href="@{/css/searchForm.css}" />
-    <script type="text/javascript" th:src="@{/js/navBarMainContainerLogo.js}" ></script>
+    <script type="text/javascript" th:src="@{/js/utils.js}" ></script>
     <script type="text/javascript" th:src="@{/js/searchForm.js}" ></script>
 </head>
 
