--- a/module-main/motobudzetapi/src/main/resources/templates/advertisement.html
+++ b/module-main/motobudzetapi/src/main/resources/templates/advertisement.html
@@ -5,6 +5,7 @@
     <title>Moto-Budżet</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/navBarMainContainerLogoAdvertisement.css}" />
     <link rel="stylesheet" type="text/css" th:href="@{/css/advertisement.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/css/quill.snow.css}" />
     <script type="text/javascript" th:src="@{/js/advertisement.js}" ></script>
     <script type="text/javascript" th:src="@{/js/utils.js}" ></script>
     <script type="text/javascript" th:src="@{/js/quill.js}" ></script>
